<resources>
    <string-array name="form_dropdown_options">
        <item>One</item>
        <item>Two</item>
        <item>Three</item>
        <item>Four</item>
        <item>Five</item>
    </string-array>
    <string name="app_name">GhousedevDemoApp</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Main Screen</string>
    <string name="menu_slideshow">Form Demo</string>
    <string name="saved_forms">Saved Forms</string>
    <string name="field_one">Field One</string>
    <string name="field_five">Field Five</string>
    <string name="field_four">Field Four</string>
    <string name="field_three">Field Three</string>
    <string name="field_two">Field Two</string>
    <string name="checkbox_options">Checkbox options</string>
    <string name="switches_to_toggle_options">Switches to toggle options</string>
    <string name="dropdown_lists_to_choose_an_option">Dropdown lists to choose an option</string>
    <string name="save">Save</string>
    <string name="preview">Preview</string>
    <string name="enter_your_login_details">Enter your login details</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="form">Form</string>
</resources>