<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.login.LoginFragment">

    <androidx.cardview.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/enterYourDetailsTv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_margin="16dp"
                android:text="@string/enter_your_login_details" />

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/usernameInput"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/username"
                    android:inputType="textWebEmailAddress|textPersonName|textAutoComplete" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="16dp">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/passwordInput"
                    android:layout_width="320dp"
                    android:layout_height="wrap_content"
                    android:hint="@string/password"
                    android:inputType="textWebEmailAddress|textPersonName|textAutoComplete" />
            </com.google.android.material.textfield.TextInputLayout>

            <Button
                android:id="@+id/login_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center|end"
                android:layout_margin="16dp"
                android:text="@string/login" />
        </androidx.appcompat.widget.LinearLayoutCompat>
    </androidx.cardview.widget.CardView>
</androidx.constraintlayout.widget.ConstraintLayout>